TP3_brost/vivado_hls.log
INFO: [HLS 200-10] Running 'D:/Xillinx/Vivado/2019.2/bin/unwrapped/win64.o/vivado_hls.exe'
INFO: [HLS 200-10] For user 'achil' on host 'laptop-5g1tofhu' (Windows NT_amd64 version 6.2) on Fri Dec 08 14:38:09 +0100 2023
INFO: [HLS 200-10] In directory 'C:/Users/achil/OneDrive/Documents/5A/brost/TP3_brost'
Sourcing Tcl script 'C:/Users/achil/OneDrive/Documents/5A/brost/TP3_brost/c_grav/solution1/csynth.tcl'
INFO: [HLS 200-10] Opening project 'C:/Users/achil/OneDrive/Documents/5A/brost/TP3_brost/c_grav'.
INFO: [HLS 200-10] Adding design file 'c_grav/c_grav.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'c_grav/c_grav_tb.cpp' to the project
INFO: [HLS 200-10] Opening solution 'C:/Users/achil/OneDrive/Documents/5A/brost/TP3_brost/c_grav/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'c_grav/c_grav.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from c_grav/c_grav.cpp:1:
c_grav/c_grav.cpp:39:19: error: assigning to 'int *' from incompatible type 'int'; take the address with &
             x_out=i;
                  ^~
                   &
c_grav/c_grav.cpp:40:19: error: assigning to 'int *' from incompatible type 'int'; take the address with &
             y_out=j;
                  ^~
                   &
2 errors generated.
Failed during preprocessing.
    while executing
"source C:/Users/achil/OneDrive/Documents/5A/brost/TP3_brost/c_grav/solution1/csynth.tcl"
    invoked from within
"hls::main C:/Users/achil/OneDrive/Documents/5A/brost/TP3_brost/c_grav/solution1/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
